# easy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README.mk
.github/workflows/: coveralls.yml  linux.yml  macos.yml  windows.yml
bench/: CMakeLists.txt  reshaping.cpp
docs/: Doxyfile  Makefile  acknowledgments.rst  changelog.rst  conf.py  index.rst  installation.rst  introduction.rst  reference.rst
examples/: CMakeLists.txt  cudd_demo.cpp  example4.cpp
experiments/: CMakeLists.txt  lp.cpp
ext/: CMakeLists.txt
ext/alice/include/alice/: store_api.hpp
ext/alice/include/alice/commands/: help.hpp  print.hpp
ext/alice/include/alice/detail/: logging.hpp
ext/kitty/include/kitty/: operations.hpp
include/: CMakeLists.txt
include/easy/: easy.hpp  esop_from_pkrm.hpp  esop_from_pprm.hpp  esop_from_rcf.hpp
include/easy/algorithms/: kronecker_decomposition.hpp  lp.hpp
include/easy/bdd/: bdd.hpp
include/easy/cli/commands/: cover.hpp  ec.hpp  exorlink.hpp  function.hpp  sort.hpp  synth.hpp
include/easy/cli/stores/: esop.hpp  function.hpp
include/easy/detail/: cube_manipulators.hpp
include/easy/esop/: combine.hpp  constructors.hpp  cube_utils.hpp  esop.hpp  exact_synthesis.hpp  exorlink.hpp  helliwell.hpp  synthesis.hpp
include/easy/io/: read_esop.hpp
include/easy/sat/: cnf_symmetry_breaking.hpp  cnf_writer.hpp  constraints.hpp  gauss.hpp  sat_solver.hpp  xor_clauses_to_cnf.hpp
include/easy/sat2/: cardinality.hpp  cnf_from_xcnf.hpp  core_utils.hpp  maxsat.hpp  sat_solver.hpp  trim_core.hpp
include/easy/utils/: dynamic_bitset.hpp  stopwatch.hpp
include/easy/zdd/: zdd.hpp
lib/: CMakeLists.txt
lib/alice/include/alice/: command.hpp
lib/alice/include/alice/commands/: ps.hpp  quit.hpp  store.hpp
lib/bill/bill/include/bill/: bill.hpp
lib/bill/bill/include/bill/sat/: incremental_totalizer_cardinality.hpp  tseytin.hpp
lib/cudd/cplusplus/: cuddObj.hh
lib/cudd/cudd/: cuddInt.h
lib/glucose/include/glucose/: glucose.hpp
lib/kitty/include/kitty/: bit_operations.hpp
lib/sat/glucose/: glucose.hpp
programs/: CMakeLists.txt  core.cpp  easy.cpp  easy_shell.cpp  enum_esops.cpp  esop_enum.cpp  esop_maniac.cpp  verify_esops.cpp
src/cli/commands/: cover.hpp  ec.hpp  exorlink.hpp  function.hpp  sort.hpp  synth.hpp
src/cli/stores/: esop.hpp  function.hpp
src/esop/: combine.cpp  combine.hpp  constructors.cpp  constructors.hpp  cube_utils.cpp  cube_utils.hpp  esop.cpp  esop.hpp  esop_synthesis.cpp  esop_synthesis.hpp  exact_synthesis.cpp  exact_synthesis.hpp  exorlink.cpp  exorlink.hpp  helliwell.cpp  helliwell.hpp  print.cpp  print.hpp  synthesis.cpp  synthesis.hpp
src/io/: read_esop.cpp  read_esop.hpp  write_esop.cpp  write_esop.hpp
src/sat/: cnf_symmetry_breaking.cpp  cnf_symmetry_breaking.hpp  cnf_writer.cpp  cnf_writer.hpp  gauss.cpp  gauss.hpp  sat_solver.cpp  sat_solver.hpp  xor_clauses_to_cnf.cpp  xor_clauses_to_cnf.hpp
src/utils/: stopwatch.hpp  string_utils.cpp  string_utils.hpp
test/: CMakeLists.txt  constructors.cpp  empty.cpp  esop.cpp  esop_from_pkrm.cpp  esop_from_pprm.cpp  esop_from_rcf.cpp  exact_synthesis.cpp  sat.cpp  synthesis.cpp  tests.cpp
test/algorithm/: exact.cpp
test/esop/: constructors.cpp
test/io/: read_esop.cpp
test/sat/: constraints.cpp  gauss.cpp  xor_clauses_to_cnf.cpp
test/sat2/: cardinality.cpp  maxsat.cpp  sat_solver.cpp
test/zdd/: zdd.cpp
